--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 
 <h1>Tech Talks</h1>
 <ul>
-<li>a: the first tech talk</li>
-<li>b: a second tech talk</li>
-<li>c: a third tech talk</li>
+ <li>the first tech talk
+  <ul>
+   <li><a href="https://www.w3schools.com">Watch the video</a></li>
+   <li><a href="https://www.w3schools.com">Download the slides</a></li>
+  </ul>
+ </li>
+<li>a second tech talk</li>
+<li>a third tech talk</li>
 </ul>
 
 </body>
-</html> 
+</html>
