--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <li>the first tech talk
   <ul>
    <li><a href="https://www.w3schools.com">Watch the video</a></li>
-   <li><a href="https://www.w3schools.com">Download the slides</a></li>
+   <li><a href="https://www.github.com">Download the slides</a></li>
   </ul>
  </li>
 <li>a second tech talk</li>
